# argonaut

./: Cargo.toml
src/: bundler.rs  cli.rs  compiler.rs  config.rs  lib.rs  main.rs  runner.rs  scaffold.rs  ui.rs  watcher.rs
src/bundler/: comment.rs  minify.rs  mod.rs  resolver.rs
src/bundler/strategies/: mod.rs  topological.rs  tree_sitter.rs
src/cli/: app.rs
src/config/: settings.rs
src/core/: .default.clang-format  bundler.rs  compiler.rs  formatter.rs  mod.rs  profiler.py  profiler.rs  runner.rs  sandbox.rs  scaffold.rs  tester.rs  tracer.py  watcher.rs
src/parser/: mod.rs  payload.rs  server.rs
src/utils/: mod.rs  paths.rs  ui.rs
