[package]
name = "argonaut"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
inquire = "0.9.4"
notify = "8.2.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
tree-sitter = "0.26.9"
tree-sitter-cpp = "0.23.4"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
