[package]
name = "argonaut"
version = "0.4.0"
edition = "2024"

[[bin]]
name = "argo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
directories = "6.0.0"
inquire = "0.9.4"
libc = "0.2.186"
libseccomp = "0.4.0"
serde = { version = "1.0.228", features = ["derive"] }
strsim = "0.11.1"
toml = "1.1.2"
tree-sitter = "0.26.9"
tree-sitter-cpp = "0.23.4"
serde_json = "1.0.150"
tiny_http = "0.12.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
